kubernetes/auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    app: auth-service
