kubernetes/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth
spec:
  selector:
    app: auth-service
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
  type: ClusterIP
